<resources>
    <string name="app_name">TokenApp</string>
    <string name="action_settings">Settings</string>
    <string name="enter_email_phone_number">Enter email/phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="login">LogIn</string>
    <string name="register_new_user">Register new user?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_company_id">Enter Company ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="Phone">Phone</string>
    <string name="company_name">Company Name</string>
    <string name="company_id">Company ID</string>
    <string name="profile">Profile</string>
    <string name="communication">View Communication</string>
    <string name="gallery">Gallery</string>
    <string name="generate_order">Generate Order</string>
    <string name="view_order">View Orders</string>
</resources>
