<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LogInActivity">

    <EditText
        android:id="@+id/email_phone_EditText_LogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_phone_number"
        style="@style/EditTextStyle"
        />

    <EditText
        android:id="@+id/password_EditText_LogIn"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_below="@id/email_phone_EditText_LogIn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LogInButton"
        android:text="@string/login"
        style="@style/ButtonStyle"
        android:layout_below="@id/password_EditText_LogIn"/>

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="match_parent"
        style="@style/TextViewStyle"
        android:layout_height="wrap_content"
        android:text="@string/register_new_user"
        android:layout_below="@id/LogInButton"/>

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewStyle"
        android:text="@string/forgot_password"
        android:layout_below="@id/registerTextView"/>

</RelativeLayout>