<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".project.UserManagement.ProfileActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.design.widget.AppBarLayout>
    <FrameLayout
        android:layout_below="@id/appbar"
        android:id="@+id/photoFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/userPhoto"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabImage"
        android:src="@drawable/ic_action_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|right|bottom"/>
    </FrameLayout>
    <TextView
        android:id="@+id/name"
        style="@style/ProfileTitle"
        android:text="@string/name"
        android:layout_below="@id/photoFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ProfileContent"
        android:text="Sanika"
        android:layout_below="@id/name"/>
    <TextView
        android:id="@+id/email"
        style="@style/ProfileTitle"
        android:layout_below="@id/nameTextView"
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/emailTextView"
        android:text="sanika.vanjari@grassrootsindia.in"
        android:layout_width="match_parent"
        style="@style/ProfileContent"
        android:layout_below="@id/email"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        style="@style/ProfileTitle"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:layout_below="@id/emailTextView"
        android:text="@string/Phone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneTextView"
        style="@style/ProfileContent"
        android:text="961982255"
        android:layout_below="@id/phone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ProfileTitle"
        android:id="@+id/company"
        android:layout_below="@id/phoneTextView"
        android:text="@string/company_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/companyTextView"
        android:layout_below="@id/company"
        style="@style/ProfileContent"
        android:text="Grass Roots"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/companyID"
        style="@style/ProfileTitle"
        android:text="@string/company_id"
        android:layout_below="@id/companyTextView"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ProfileContent"
        android:id="@+id/companyIDTextView"
        android:layout_below="@id/companyID"
        android:text="145826"/>

</RelativeLayout>